--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -81,6 +81,6 @@
     <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
 
     <!-- Device specific buttons -->
-    <string name="extra_keys_title">Extra buttons</string>
-    <string name="extra_keys_summary">Settings for device specific buttons</string>
+    <string name="extras_title">Extras</string>
+    <string name="additional_buttons_title">Additional buttons</string>
 </resources>
