--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -95,4 +95,8 @@
     <string name="power_menu_bug_report_title">Bug report</string>
     <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>
     <string name="power_menu_lockdown_title">Lockdown</string>
+
+    <!-- Applications: Long screen -->
+    <string name="long_screen_settings_title">Full screen apps</string>
+    <string name="long_screen_settings_summary">Force legacy apps to use full screen aspect ratio</string>
 </resources>
