--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -153,4 +153,8 @@
     <string name="status_bar_system_icons_title">System icons</string>
     <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
 
+    <!-- Show LTE/4G switch -->
+    <string name="show_lte_fourgee_title">4G/LTE network icon</string>
+    <string name="show_lte_fourgee_summary">Display the 4G or LTE network icon when available in the statusbar</string>
+
 </resources>
