EVToolbox: update power menu options
 PQ2A.190205.001 brought in a new option for the power menu,
 adding an emergency dialer

Change-Id: I34ed064092115eff34e49cc681bb727d2a0d18c7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -95,6 +95,7 @@
     <string name="power_menu_bug_report_title">Bug report</string>
     <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>
     <string name="power_menu_lockdown_title">Lockdown</string>
+    <string name="power_menu_emergency_title">Emergency</string>
 
     <!-- Applications: Long screen -->
     <string name="long_screen_settings_title">Full screen apps</string>
