--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -104,6 +104,18 @@
     <string name="extras_title">Extras</string>
     <string name="additional_buttons_title">Additional buttons</string>
 
+    <!-- Power menu -->
+    <string name="power_menu_title">Power menu actions</string>
+    <string name="power_menu_summary">Customize the actions available when you long press the power key</string>
+    <string name="power_menu_screenshot_title">Screenshot</string>
+    <string name="power_menu_screenshot_summary">Long-press for partial screenshot</string>
+    <string name="power_menu_airplane_title">Airplane mode</string>
+    <string name="power_menu_users_title">User switcher</string>
+    <string name="power_menu_bug_report_title">Bug report</string>
+    <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>
+    <string name="power_menu_lockdown_title">Lockdown</string>
+    <string name="power_menu_emergency_title">Emergency</string>
+
     <!-- Applications: Long screen -->
     <string name="long_screen_settings_title">Full screen apps</string>
     <string name="long_screen_settings_summary">Force legacy apps to use full screen aspect ratio</string>
