EVToolbox: go back to AOSP battery percent options
 Drawing the percent inside the icon is broken. Remove the option
 until the changes are revisited.

Change-Id: I727f4e1329f8da0a6c4f110fcf8bb9f34b8ddaa7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -163,9 +163,7 @@
 
     <!-- Status bar - Battery percentage -->
     <string name="status_bar_battery_percentage_title">Battery percentage</string>
-    <string name="status_bar_battery_percentage_default">Hidden</string>
-    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
-    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
+    <string name="status_bar_battery_percentage_summary">Show battery percentage in status bar</string>
 
     <!-- Gestures: Touchscreen gestures -->
     <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
