LineageParts: Add device controls global action
Change-Id: I67ac94740b4d0acbc8dd9ae98123e5c0f8aaf0bb

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -108,6 +108,7 @@
     <string name="power_menu_bug_report_devoptions_unavailable">Bug reporting is disabled as development settings aren\'t enabled</string>
     <string name="power_menu_bug_report_unavailable_for_user">Bug reporting is disabled for non-primary users.</string>
     <string name="power_menu_emergency_title">Emergency</string>
+    <string name="power_menu_devicecontrols_title">Device controls</string>
 
     <!-- Applications: Long screen -->
     <string name="long_screen_settings_title">Full screen apps</string>
