NotificationLightSettings: reposition + button
Follow other similar pages that have an app selection.

Change-Id: Ifd9f79776192964cd507ec8fd2f645d994636452

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -235,7 +235,7 @@
     <!-- Lights settings, LED notification -->
     <string name="led_notification_title">Light settings</string>
     <string name="led_notification_text">LED light enabled by settings</string>
-    <string name="notification_light_no_apps_summary">To add per app control, activate \'%1$s\' and press \'\u002b\' on the menu bar</string>
+    <string name="notification_light_add_apps_empty_summary">To add per app control, activate \'%1$s\' and press \'Add\'</string>
 
     <!-- Status bar - Network Traffic -->
     <string name="network_traffic_settings_title">Network traffic monitor</string>
