--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,12 +112,8 @@
     <string name="long_screen_settings_no_apps">No apps</string>
 
     <!-- Display : Rotation  -->
-    <string name="accelerometer_title">Use auto-rotation</string>
-    <string name="display_rotation_title">Rotation settings</string>
-    <string name="display_rotation_enabled">Auto-rotation is enabled</string>
-    <string name="display_rotation_disabled">Auto-rotation is disabled</string>
-    <string name="display_rotation_unit">degrees</string>
-    <string name="display_rotation_category_title">Rotation modes</string>
+    <string name="display_rotation_title">Rotation manager</string>
+    <string name="display_rotation_summary" >Control orientations used by auto-rotate</string>
     <string name="display_rotation_0_title">0 degrees</string>
     <string name="display_rotation_90_title">90 degrees</string>
     <string name="display_rotation_180_title">180 degrees</string>
